fixed horizontal scroll problem due to over extending parent lucket

--- a/src/Funcs/LucketItem/index.css
+++ b/src/Funcs/LucketItem/index.css
@@ -11,7 +11,7 @@
 }
 
 .FocusLucketItem {
-    width: 100%;
+    width: 99.7%;
     display: flex;
     border: 2px solid red;
     background-color: darkgrey;
